--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "audit": "lerna exec --concurrency 1 'echo $LERNA_PACKAGE_NAME && npm audit'",
+    "audit": "npm audit && lerna exec --concurrency 1 'echo $LERNA_PACKAGE_NAME && npm audit'",
     "audit:fix": "lerna exec --concurrency 1 'echo $LERNA_PACKAGE_NAME && npm audit fix'",
     "bootstrap": "lerna bootstrap --ci",
     "clean": "npm-run-all clean:gatsby-site clean:packages",
