--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -25,6 +25,7 @@ tasks:
   init: >
     cp sample.env .env &&
     npm ci &&
+    gp sync-done npm-ci &&
     gp await-port 27017 &&
     npm run seed &&
     mongo --eval "db.fsyncLock(); db.fsyncUnlock()"
@@ -35,6 +36,12 @@ tasks:
 
 - name: client
   before: export HOME_LOCATION=$(gp url 8000) && export API_LOCATION=$(gp url 3000)
+  init: >
+    cd ./client &&
+    gp sync-await npm-ci &&
+    npm run prebuild &&
+    npm run build:workers &&
+    cd ..
   command: >
     gp await-port 3000 &&
     cd ./client &&
