--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "audit": "npm audit & lerna exec 'echo $LERNA_PACKAGE_NAME & npm audit'",
+    "audit": "npm audit & lerna exec --no-bail 'echo $LERNA_PACKAGE_NAME & npm audit'",
     "audit:fix": "npm audit fix & lerna exec 'echo $LERNA_PACKAGE_NAME & npm audit fix'",
     "build": "npm-run-all ensure-env -p build:*",
     "build:client": "cd ./client && npm run build",
